--- a/src/styles/signOut.css
+++ b/src/styles/signOut.css
@@ -115,6 +115,7 @@
  }
 
  .list{
+   display:flex;
   top: 70px;
   width: 100%;
   padding-bottom: 50px;
@@ -122,7 +123,7 @@
  }
 
  .item{
-  display: flex;
+   display: block;
    text-align: start;
    border: none;
    outline: none;
