added more styles for the guild items

--- a/src/styles/signOut.css
+++ b/src/styles/signOut.css
@@ -154,9 +154,10 @@
 
 
  .guildAvatar{
-   height: 100px;
+   height: 80px;
+   border-radius: 50%;
  }
  .guildTitle{
-   width:120px;
-   font-size: 14px;
+   width:100px;
+   font-size: 12px;
  }
