--- a/src/styles/signOut.css
+++ b/src/styles/signOut.css
@@ -131,9 +131,21 @@
    padding: 10px
  }
 
- /* .item:hover{
+ .iBtnitem{
+  width: 100%;
+  height: 40px;
+  text-align: start;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  background-color:#3b3c3da6;
+  color: white;
+  padding-left: 10px
+}
+
+ .Btnitem:hover{
   background-color:#4e4e4e;
- } */
+ }
 
  .logout-container{
     top: 20px;
