--- a/src/styles/signOut.css
+++ b/src/styles/signOut.css
@@ -131,7 +131,7 @@
    padding: 10px
  }
 
- .iBtnitem{
+ .Btnitem{
   width: 100%;
   height: 40px;
   text-align: start;
@@ -173,4 +173,8 @@
  .guildTitle{
    width:100px;
    font-size: 12px;
+ }
+
+ #doneBtn{
+   margin-top: 10px;
  }
