--- a/src/styles/signOut.css
+++ b/src/styles/signOut.css
@@ -11,11 +11,13 @@
     border-radius: 8px;
     padding: 30px;
     background-color: #2f3136;
+    /* transform: scale(0.8);
+    transform-origin: 0 0; */
  }
  .parentDiv{ 
+  min-height: 491px;
+  width: 460px;
    position: relative;
-   min-height: 491px;
-   width: 460px;
    background-color: #18191C;
    border-radius: 8px;
    padding-left: 30px;
@@ -102,6 +104,8 @@
 
  .channelHeader{
    font-size: 14px;
+   font-family: Arial, sans-serif;
+   font-weight: bold;
  }
 
  .channelContainerBtn{
@@ -115,15 +119,16 @@
    outline: none;
    background-color:#3b3c3da6;
    color: white;
-   padding-left: 10px
+   padding-left: 10px;
+   box-shadow: 0 8px 16px rgba(0,0,0,0.24)
  }
 
  .list{
   display:flex;
   flex-wrap: wrap;
-  top: 70px;
+  top: 80px;
   width: 100%;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   
   /* display: none; */
  }
@@ -170,13 +175,13 @@
 
 
  .guildAvatar{
-   height: 80px;
-
+   height: 70px;
    border-radius: 50%;
  }
  .guildTitle{
    width:100px;
-   font-size: 12px;
+   font-size: 16px;
+   font-weight: medium;
  }
 
  #doneBtn{
